--- a/convert_data/clean_data.ipynb
+++ b/convert_data/clean_data.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "blank-sodium",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5833\n"
+     ]
+    }
+   ],
    "source": [
     "import torch \n",
     "import pickle\n",
@@ -16,17 +24,26 @@
     "#pickle_in2 = open(\"data/stdc/dmixed(579)_p1/dict.eq_distr\",\"rb\")\n",
     "\n",
     "\n",
-    "dataset = torch.load('data/stdc/d5p05_full/graphs.pt')\n",
+    "dataset = torch.load('../data/test2/graphs.pt')\n",
     "#dataset = torch.load('data/stdc/dmixed(57)_p1/graphs_clean.pt')\n",
     "print(len(dataset))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "involved-closing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.477798731356078\n",
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "num_nodes=0\n",
     "max_nodes=0\n",
@@ -43,10 +60,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "adequate-letters",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5833, 72)\n",
+      "5741\n"
+     ]
+    }
+   ],
    "source": [
     "flat_eq = np.zeros((len(dataset),(max_nodes*2)+6))\n",
     "print(flat_eq.shape)\n",
@@ -63,20 +89,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "vulnerable-registrar",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#torch.save(clean_data,'data/stdc/d9p1/graphs_clean.pt')"
+    "torch.save(clean_data,'../data/test2/graphs_clean.pt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "genuine-directive",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1446., 1486., 1489., 1320.]], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "counts = torch.zeros(4)\n",
     "for ix in range(len(clean_data)):\n",
@@ -109,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
