--- a/convert_data/convert_data_pytorch.ipynb
+++ b/convert_data/convert_data_pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "motivated-tunisia",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "charitable-corporation",
    "metadata": {},
    "outputs": [
@@ -30,12 +30,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13936\n"
+      "5833\n"
      ]
     }
    ],
    "source": [
-    "pickle_in2 = open(\"data/stdc/d9p1/dict.eq_distr\",\"rb\")\n",
+    "pickle_in2 = open(\"../data/test2/dict.eq_distr\",\"rb\")\n",
     "eq_distr = []\n",
     "while 1:\n",
     "    try:\n",
@@ -48,22 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "intensive-columbia",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Use files from \"new_datacreator\"\n",
     "\n",
-    "node_feat_load = np.genfromtxt('data/stdc/d9p1/node_features.txt')\n",
-    "edge_idx_load = np.genfromtxt('data/stdc/d9p1/edgelist.txt',usecols=(0,1))\n",
-    "edge_feat_load = np.genfromtxt('data/stdc/d9p1/edgelist.txt',dtype = float,usecols=3,comments = '}')\n",
-    "graph_info = np.genfromtxt('data/stdc/d9p1/graph_info.txt')"
+    "node_feat_load = np.genfromtxt('../data/test2/node_features.txt')\n",
+    "edge_idx_load = np.genfromtxt('../data/test2/edgelist.txt',usecols=(0,1))\n",
+    "edge_feat_load = np.genfromtxt('../data/test2/edgelist.txt',dtype = float,usecols=3,comments = '}')\n",
+    "graph_info = np.genfromtxt('../data/test2/graph_info.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "instructional-moderator",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
     "\n",
     "    \n",
     "\n",
-    "torch.save(graphs,'data/stdc/d9p1/graphs.pt')#change namnes  \n"
+    "torch.save(graphs,'../data/test2/graphs.pt')#change namnes  \n"
    ]
   },
   {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "structured-edgar",
    "metadata": {},
    "outputs": [
@@ -159,19 +159,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of graphs: 4557\n",
+      "Number of graphs: 5741\n",
       "\n",
       "First graph attributes:\n",
-      "Data(edge_attr=[12], edge_index=[2, 12], x=[4, 2], y=[1, 4])\n",
+      "Data(edge_attr=[110], edge_index=[2, 110], x=[11, 2], y=[1, 4])\n",
       "=============================================================\n",
-      "Number of nodes: 4\n",
-      "Number of edges: 12\n",
-      "Average node degree: 3.00\n"
+      "Number of nodes: 11\n",
+      "Number of edges: 110\n",
+      "Average node degree: 10.00\n"
      ]
     }
    ],
    "source": [
-    "dataset = torch.load('data/stdc/d5p05/graphs_clean.pt')\n",
+    "dataset = torch.load('../data/test2/graphs_clean.pt')\n",
     "#print()\n",
     "#print(f'Dataset: {dataset}:')\n",
     "#print('====================')\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "sharp-economics",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "Number of training graphs: 8\n",
-      "Number of test graphs: 90\n"
+      "Number of test graphs: 5733\n"
      ]
     }
    ],
@@ -340,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
