--- a/model2.ipynb
+++ b/model2.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "30b9af29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "id": "0fa2b133",
    "metadata": {},
    "outputs": [
     {
@@ -72,13 +74,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13b5b649",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "id": "cbd7c8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,38 +274,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "id": "836b8ef0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "device =torch.device('cpu')"
+    "device =torch.device('cuda')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "id": "2207bfd7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 005, Train Acc: 0.2980, Train Acc_X: 0.5540, Train Acc_Z: 0.5594, Test Acc: 0.2729\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-5711ac5e49a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[0mloss_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    114\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m250\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 115\u001b[0;31m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    116\u001b[0m     \u001b[0mloss_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m     \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-5711ac5e49a9>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mloss_X\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_Z\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# or loss = loss1 + loss2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mloss_holder\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# Update parameters based on gradients.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/gnn/lib/python3.8/site-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    253\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    254\u001b[0m                 inputs=inputs)\n\u001b[0;32m--> 255\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    256\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/gnn/lib/python3.8/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    145\u001b[0m         \u001b[0mretain_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m     Variable._execution_engine.run_backward(\n\u001b[0m\u001b[1;32m    148\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch: 005, Train Acc: 0.2955, Train Acc_X: 0.5522, Train Acc_Z: 0.5574, Test Acc: 0.2712\n",
+      "Epoch: 010, Train Acc: 0.3000, Train Acc_X: 0.5558, Train Acc_Z: 0.5636, Test Acc: 0.2780\n",
+      "Epoch: 015, Train Acc: 0.3221, Train Acc_X: 0.5654, Train Acc_Z: 0.5850, Test Acc: 0.3037\n",
+      "Epoch: 020, Train Acc: 0.3395, Train Acc_X: 0.5725, Train Acc_Z: 0.6054, Test Acc: 0.3157\n",
+      "Epoch: 025, Train Acc: 0.3799, Train Acc_X: 0.5783, Train Acc_Z: 0.6616, Test Acc: 0.3704\n",
+      "Epoch: 030, Train Acc: 0.4074, Train Acc_X: 0.5895, Train Acc_Z: 0.6891, Test Acc: 0.4123\n",
+      "Epoch: 035, Train Acc: 0.4295, Train Acc_X: 0.5953, Train Acc_Z: 0.7154, Test Acc: 0.4260\n",
+      "Epoch: 040, Train Acc: 0.4348, Train Acc_X: 0.5951, Train Acc_Z: 0.7277, Test Acc: 0.4286\n",
+      "Epoch: 045, Train Acc: 0.4424, Train Acc_X: 0.5993, Train Acc_Z: 0.7455, Test Acc: 0.4260\n",
+      "Epoch: 050, Train Acc: 0.4694, Train Acc_X: 0.6196, Train Acc_Z: 0.7574, Test Acc: 0.4756\n",
+      "Epoch: 055, Train Acc: 0.4873, Train Acc_X: 0.6203, Train Acc_Z: 0.7848, Test Acc: 0.4825\n",
+      "Epoch: 060, Train Acc: 0.5252, Train Acc_X: 0.6444, Train Acc_Z: 0.8194, Test Acc: 0.5261\n",
+      "Epoch: 065, Train Acc: 0.5699, Train Acc_X: 0.6743, Train Acc_Z: 0.8455, Test Acc: 0.5560\n",
+      "Epoch: 070, Train Acc: 0.6176, Train Acc_X: 0.7297, Train Acc_Z: 0.8440, Test Acc: 0.5937\n",
+      "Epoch: 075, Train Acc: 0.6679, Train Acc_X: 0.7656, Train Acc_Z: 0.8663, Test Acc: 0.6544\n",
+      "Epoch: 080, Train Acc: 0.7051, Train Acc_X: 0.8027, Train Acc_Z: 0.8790, Test Acc: 0.6895\n",
+      "Epoch: 085, Train Acc: 0.7382, Train Acc_X: 0.8201, Train Acc_Z: 0.8989, Test Acc: 0.7348\n",
+      "Epoch: 090, Train Acc: 0.7705, Train Acc_X: 0.8446, Train Acc_Z: 0.9045, Test Acc: 0.7502\n",
+      "Epoch: 095, Train Acc: 0.7607, Train Acc_X: 0.8304, Train Acc_Z: 0.9156, Test Acc: 0.7511\n",
+      "Epoch: 100, Train Acc: 0.7897, Train Acc_X: 0.8500, Train Acc_Z: 0.9279, Test Acc: 0.7716\n",
+      "Epoch: 105, Train Acc: 0.7882, Train Acc_X: 0.8424, Train Acc_Z: 0.9326, Test Acc: 0.7784\n",
+      "Epoch: 110, Train Acc: 0.8250, Train Acc_X: 0.8750, Train Acc_Z: 0.9388, Test Acc: 0.8204\n",
+      "Epoch: 115, Train Acc: 0.8404, Train Acc_X: 0.8842, Train Acc_Z: 0.9480, Test Acc: 0.8238\n",
+      "Epoch: 120, Train Acc: 0.8993, Train Acc_X: 0.9393, Train Acc_Z: 0.9547, Test Acc: 0.8948\n",
+      "Epoch: 125, Train Acc: 0.9103, Train Acc_X: 0.9496, Train Acc_Z: 0.9571, Test Acc: 0.8948\n",
+      "Epoch: 130, Train Acc: 0.9270, Train Acc_X: 0.9563, Train Acc_Z: 0.9685, Test Acc: 0.9093\n",
+      "Epoch: 135, Train Acc: 0.9219, Train Acc_X: 0.9529, Train Acc_Z: 0.9672, Test Acc: 0.9213\n",
+      "Epoch: 140, Train Acc: 0.9333, Train Acc_X: 0.9632, Train Acc_Z: 0.9692, Test Acc: 0.9145\n",
+      "Epoch: 145, Train Acc: 0.9368, Train Acc_X: 0.9654, Train Acc_Z: 0.9708, Test Acc: 0.9093\n",
+      "Epoch: 150, Train Acc: 0.9353, Train Acc_X: 0.9676, Train Acc_Z: 0.9658, Test Acc: 0.9145\n",
+      "Epoch: 155, Train Acc: 0.9408, Train Acc_X: 0.9670, Train Acc_Z: 0.9725, Test Acc: 0.9290\n",
+      "Epoch: 160, Train Acc: 0.9420, Train Acc_X: 0.9663, Train Acc_Z: 0.9748, Test Acc: 0.9256\n",
+      "Epoch: 165, Train Acc: 0.9478, Train Acc_X: 0.9721, Train Acc_Z: 0.9746, Test Acc: 0.9256\n",
+      "Epoch: 170, Train Acc: 0.9469, Train Acc_X: 0.9685, Train Acc_Z: 0.9770, Test Acc: 0.9290\n",
+      "Epoch: 175, Train Acc: 0.9563, Train Acc_X: 0.9766, Train Acc_Z: 0.9795, Test Acc: 0.9341\n",
+      "Epoch: 180, Train Acc: 0.9496, Train Acc_X: 0.9725, Train Acc_Z: 0.9766, Test Acc: 0.9222\n",
+      "Epoch: 185, Train Acc: 0.9587, Train Acc_X: 0.9772, Train Acc_Z: 0.9812, Test Acc: 0.9384\n",
+      "Epoch: 190, Train Acc: 0.9567, Train Acc_X: 0.9761, Train Acc_Z: 0.9801, Test Acc: 0.9324\n",
+      "Epoch: 195, Train Acc: 0.9574, Train Acc_X: 0.9768, Train Acc_Z: 0.9804, Test Acc: 0.9299\n",
+      "Epoch: 200, Train Acc: 0.9596, Train Acc_X: 0.9797, Train Acc_Z: 0.9795, Test Acc: 0.9307\n",
+      "Epoch: 205, Train Acc: 0.9616, Train Acc_X: 0.9801, Train Acc_Z: 0.9812, Test Acc: 0.9299\n",
+      "Epoch: 210, Train Acc: 0.9594, Train Acc_X: 0.9812, Train Acc_Z: 0.9777, Test Acc: 0.9376\n",
+      "Epoch: 215, Train Acc: 0.9710, Train Acc_X: 0.9855, Train Acc_Z: 0.9855, Test Acc: 0.9367\n",
+      "Epoch: 220, Train Acc: 0.9708, Train Acc_X: 0.9844, Train Acc_Z: 0.9864, Test Acc: 0.9418\n",
+      "Epoch: 225, Train Acc: 0.9725, Train Acc_X: 0.9857, Train Acc_Z: 0.9868, Test Acc: 0.9401\n",
+      "Epoch: 230, Train Acc: 0.9708, Train Acc_X: 0.9844, Train Acc_Z: 0.9862, Test Acc: 0.9444\n",
+      "Epoch: 235, Train Acc: 0.9690, Train Acc_X: 0.9853, Train Acc_Z: 0.9835, Test Acc: 0.9401\n",
+      "Epoch: 240, Train Acc: 0.9737, Train Acc_X: 0.9862, Train Acc_Z: 0.9873, Test Acc: 0.9393\n",
+      "Epoch: 245, Train Acc: 0.9739, Train Acc_X: 0.9882, Train Acc_Z: 0.9857, Test Acc: 0.9333\n"
      ]
     }
    ],
@@ -433,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7b5be655",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f4540d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,6 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff5f1a43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -484,6 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "558f6a4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,6 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00e0ad0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,6 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5b545777",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -517,6 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2a48a171",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +576,8 @@
    "hash": "0145b67da05c79438d9b05e8abf3e06706409424441d72602b06c6ec46656107"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('gnn': conda)",
+   "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -542,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
